--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" type="text/CSS" href="MenuBar.css">
+    <link rel="stylesheet" type="text/CSS" href="app.css">
     <title>کوچه</title>
   </head>
   <body>
